--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                         <div class="section">
                             <div class="container">
                                 <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a>
-                                    <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon"
-                                        href="#" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
+                                    <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
+                                    <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
                             </div>
                         </div>
                     </div>
@@ -77,8 +77,7 @@
                                     <div class="h4 mt-0 title">About</div>
                                     <p>Hello! I am Anthony Barnett. Web Developer, Graphic Designer and Photographer.</p>
                                     <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skills and experience.
-                                        <a
-                                            href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a>
+                                        <a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a>
                                     </p>
                                 </div>
                             </div>
