--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 <div class="cc-profile-image">
                                     <a href="#"><img src="images/mark.jpg" alt="Image" /></a>
                                 </div>
-                                <div class="h2 title">Anthony Barnett</div>
+                                <div class="h2 title">Mark Edward D. Olango</div>
                                 <p class="category text-white">Web Developer, Graphic Designer, Photographer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in"
                                     data-aos-anchor="data-aos-anchor">Download CV</a>
                             </div>
@@ -62,7 +62,8 @@
                             <div class="container">
                                 <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a>
                                     <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
-                                    <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
+                                    <a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip"
+                                        title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
                             </div>
                         </div>
                     </div>
