--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                                     <a href="#"><img src="images/mark.jpg" alt="Image" /></a>
                                 </div>
                                 <div class="h2 title">Mark Edward D. Olango</div>
-                                <p class="category text-white">Web Developer, Graphic Designer, Photographer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="#" data-aos="zoom-in"
-                                    data-aos-anchor="data-aos-anchor">Download CV</a>
+                                <p class="category text-white">License Professional Teacher, I.T. Specialist, Graphics Designer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary"
+                                    href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
                             </div>
                         </div>
                         <div class="section">
