--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Creative CV</title>
+    <title>Mark Edward Olango Portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
@@ -46,7 +46,7 @@
         <div>
             <div class="profile-page">
                 <div class="wrapper">
-                    <div class="page-header page-header-small" filter-color="green">
+                    <div class="page-header page-header-small" filter-color="">
                         <div class="page-header-image" data-parallax="true" style="background-image: url('images/book.png')"></div>
                         <div class="container">
                             <div class="content-center">
