--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div>
             <div class="profile-page">
                 <div class="wrapper">
-                    <div class="page-header page-header-small" filter-color="">
+                    <div class="page-header page-header-small" filter-color="none">
                         <div class="page-header-image" data-parallax="true" style="background-image: url('images/book.png')"></div>
                         <div class="container">
                             <div class="content-center">
