--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mark Edward Olango Portfolio</title>
+    <title>Mark Edward Olango CV</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
@@ -26,7 +26,7 @@
         <div class="profile-page sidebar-collapse">
             <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary" color-on-scroll="0">
                 <div class="container">
-                    <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">Creative CV</a>
+                    <div class="navbar-translate"><a class="navbar-brand" href="#" rel="tooltip">Mark Edward Olango CV</a>
                         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
                     </div>
                     <div class="collapse navbar-collapse justify-content-end" id="navigation">
@@ -47,7 +47,7 @@
             <div class="profile-page">
                 <div class="wrapper">
                     <div class="page-header page-header-small" filter-color="none">
-                        <div class="page-header-image" data-parallax="true" style="background-image: url('images/book.png')"></div>
+                        <div class="page-header-image" data-parallax="false" style="background-image: url('images/book.png')"></div>
                         <div class="container">
                             <div class="content-center">
                                 <div class="cc-profile-image">
@@ -87,11 +87,11 @@
                                     <div class="h4 mt-0 title">Basic Information</div>
                                     <div class="row">
                                         <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-                                        <div class="col-sm-8">24</div>
+                                        <div class="col-sm-8">27</div>
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-                                        <div class="col-sm-8">anthony@company.com</div>
+                                        <div class="col-sm-8">olangomark@gmail.com</div>
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
