--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-                                        <div class="col-sm-8">140, City Center, New York, U.S.A</div>
+                                        <div class="col-sm-8">Cagayan de Oro City</div>
                                     </div>
                                     <div class="row mt-3">
                                         <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
-                                        <div class="col-sm-8">English, German, French</div>
+                                        <div class="col-sm-8">English, Tagalog, Visayan</div>
                                     </div>
                                 </div>
                             </div>
@@ -118,14 +118,14 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <div class="progress-container progress-primary"><span class="progress-badge">HTML</span>
+                                    <div class="progress-container progress-primary"><span class="progress-badge">Technical Support</span>
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="progress-container progress-primary"><span class="progress-badge">CSS</span>
+                                    <div class="progress-container progress-primary"><span class="progress-badge">Hardware Technician</span>
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
                                         </div>
@@ -134,14 +134,14 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <div class="progress-container progress-primary"><span class="progress-badge">JavaScript</span>
+                                    <div class="progress-container progress-primary"><span class="progress-badge">Python</span>
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="progress-container progress-primary"><span class="progress-badge">SASS</span>
+                                    <div class="progress-container progress-primary"><span class="progress-badge">Digital Electronics</span>
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
                                         </div>
@@ -150,14 +150,14 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <div class="progress-container progress-primary"><span class="progress-badge">Bootstrap</span>
+                                    <div class="progress-container progress-primary"><span class="progress-badge">Video Editing</span>
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="progress-container progress-primary"><span class="progress-badge">Photoshop</span>
+                                    <div class="progress-container progress-primary"><span class="progress-badge">Graphics Designing</span>
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
                                         </div>
