--- a/index.html
+++ b/index.html
@@ -399,14 +399,14 @@
                         <div class="row">
                             <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                                 <div class="card-body cc-education-header">
-                                    <p>2013 - 2015</p>
+                                    <p>2022 - 2025</p>
                                     <div class="h5">Master's Degree</div>
                                 </div>
                             </div>
                             <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                                 <div class="card-body">
-                                    <div class="h5">Master of Information Technology</div>
-                                    <p class="category">University of Computer Science</p>
+                                    <div class="h5">Master of Technical and Technology Education</div>
+                                    <p class="category">University of Science and Technology of Southern Philippines</p>
                                     <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque
                                         cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
                                 </div>
@@ -417,14 +417,14 @@
                         <div class="row">
                             <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                                 <div class="card-body cc-education-header">
-                                    <p>2009 - 2013</p>
+                                    <p>2012 - 2018</p>
                                     <div class="h5">Bachelor's Degree</div>
                                 </div>
                             </div>
                             <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                                 <div class="card-body">
-                                    <div class="h5">Bachelor of Computer Science</div>
-                                    <p class="category">University of Computer Science</p>
+                                    <div class="h5">Bachelor of Secondary Education major in Technology Livelihood & Education</div>
+                                    <p class="category">University of Science and Technology of Southern Philippines</p>
                                     <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque
                                         cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
                                 </div>
@@ -441,8 +441,8 @@
                             </div>
                             <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                                 <div class="card-body">
-                                    <div class="h5">Science and Mathematics</div>
-                                    <p class="category">School of Secondary board</p>
+                                    <div class="h5">Basic Secondary Education</div>
+                                    <p class="category">Misamis Oriental General Comprehensive Highschool</p>
                                     <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque
                                         cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
                                 </div>
@@ -577,7 +577,7 @@
                 href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
         <div class="h4 title text-center">Mark Edward Olango</div>
         <div class="text-center text-muted">
-            <p>&copy; University of Science and Technology of Southern Philippines. All rights reserved.<br><a class="credit" href="https://www.ustp.edu.ph" target="_blank">USTP-CDO</a></p>
+            <p>&copy; University of Science and Technology of Southern Philippines.<br><a class="credit" href="https://www.ustp.edu.ph" target="_blank">USTP-CDO</a></p>
         </div>
     </footer>
     <script src="js/core/jquery.3.2.1.min.js?ver=1.1.0"></script>
