--- a/index.html
+++ b/index.html
@@ -343,13 +343,13 @@
                         <div class="row">
                             <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                                 <div class="card-body cc-experience-header">
-                                    <p>March 2016 - Present</p>
-                                    <div class="h5">CreativeM</div>
+                                    <p>March 2022 - Present</p>
+                                    <div class="h5">COS Part-Timer</div>
                                 </div>
                             </div>
                             <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                                 <div class="card-body">
-                                    <div class="h5">Front End Developer</div>
+                                    <div class="h5">Contract of Service Part-Time College Instructor</div>
                                     <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque
                                         cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
                                 </div>
@@ -360,13 +360,13 @@
                         <div class="row">
                             <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                                 <div class="card-body cc-experience-header">
-                                    <p>April 2014 - March 2016</p>
-                                    <div class="h5">WebNote</div>
+                                    <p>May 2019 - June 2021</p>
+                                    <div class="h5">Computer Teacher</div>
                                 </div>
                             </div>
                             <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                                 <div class="card-body">
-                                    <div class="h5">Web Developer</div>
+                                    <div class="h5">Computer Teacher/ ICT Staff</div>
                                     <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque
                                         cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
                                 </div>
@@ -377,13 +377,13 @@
                         <div class="row">
                             <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                                 <div class="card-body cc-experience-header">
-                                    <p>April 2013 - February 2014</p>
-                                    <div class="h5">WEBM</div>
+                                    <p>November 2017 - March 2018</p>
+                                    <div class="h5">Pre-Service</div>
                                 </div>
                             </div>
                             <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                                 <div class="card-body">
-                                    <div class="h5">Intern</div>
+                                    <div class="h5">Pre-Service Teacher</div>
                                     <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque
                                         cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
                                 </div>
@@ -435,7 +435,7 @@
                         <div class="row">
                             <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                                 <div class="card-body cc-education-header">
-                                    <p>2007 - 2009</p>
+                                    <p>2007 - 2011</p>
                                     <div class="h5">High School</div>
                                 </div>
                             </div>
